--- a/plugins/GraphTab/src/main/java/com/affymetrix/igb/tabs/graph/YScaleAxisGUI.form
+++ b/plugins/GraphTab/src/main/java/com/affymetrix/igb/tabs/graph/YScaleAxisGUI.form
@@ -163,7 +163,7 @@
         </Component>
         <Component class="javax.swing.JSlider" name="rangeSlider">
           <Properties>
-            <Property name="toolTipText" type="java.lang.String" value="Set left knob to minimum and right know to maxium."/>
+            <Property name="toolTipText" type="java.lang.String" value="Set left know to minimum and right know to maxium."/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="vis_bounds_setter.ValueSlider"/>
