modification of track operations action from context menu Conflicts: 	core/igb/src/main/java/com/affymetrix/igb/tiers/SeqMapViewPopup.java

--- a/core/igb/src/main/java/com/affymetrix/igb/shared/Operations.form
+++ b/core/igb/src/main/java/com/affymetrix/igb/shared/Operations.form
@@ -108,6 +108,9 @@
           </AuxValues>
         </Component>
         <Component class="javax.swing.JComboBox" name="transformationCB">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="transformationCBActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JRPComboBoxWithSingleListener(&quot;TrackOperationsTab_transformation&quot;)"/>
           </AuxValues>
@@ -184,6 +187,9 @@
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JComboBox" name="operationCB">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="operationCBActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JRPComboBoxWithSingleListener(&quot;TrackOperationsTab_operation&quot;)"/>
           </AuxValues>
