--- a/core/igb/src/main/java/com/affymetrix/igb/view/SeqGroupViewGUI.form
+++ b/core/igb/src/main/java/com/affymetrix/igb/view/SeqGroupViewGUI.form
@@ -43,8 +43,8 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="currentSequenceTable">
           <Properties>
-            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="0" rowCount="0"/>
+            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="new SeqGroupTableModel(null)" type="code"/>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0"/>
