--- a/core/igb/src/main/java/com/affymetrix/igb/prefs/TrackPreferencesPanel.form
+++ b/core/igb/src/main/java/com/affymetrix/igb/prefs/TrackPreferencesPanel.form
@@ -72,12 +72,12 @@
               <Component id="tablePanel" max="32767" attributes="0"/>
               <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="propertiesPanel" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
+                  <Group type="102" attributes="0">
                       <Component id="showStrandPanel" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jPanel1" min="-2" pref="60" max="-2" attributes="0"/>
                   </Group>
+                  <Component id="propertiesPanel" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
           </Group>
@@ -405,19 +405,11 @@
                                   <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                                   <Component id="nameSizeLabel" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <Group type="103" alignment="0" groupAlignment="1" attributes="0">
-                                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                                  <Component id="FieldLabel" min="-2" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="FieldLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="labelFieldComboBox" alignment="0" min="-2" pref="110" max="-2" attributes="0"/>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="annotationLabelSizeCombobox" min="-2" pref="90" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="annotationLabelAutoResizeCheckbox" min="-2" max="-2" attributes="0"/>
-                              </Group>
                               <Component id="nameSizeComboBox" alignment="0" min="-2" pref="90" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -454,12 +446,6 @@
                   <Group type="103" groupAlignment="2" attributes="0">
                       <Component id="FieldLabel" alignment="2" min="-2" max="-2" attributes="0"/>
                       <Component id="labelFieldComboBox" alignment="2" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="2" attributes="0">
-                      <Component id="jLabel1" alignment="2" min="-2" max="-2" attributes="0"/>
-                      <Component id="annotationLabelSizeCombobox" alignment="2" min="-2" max="-2" attributes="0"/>
-                      <Component id="annotationLabelAutoResizeCheckbox" alignment="2" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -599,30 +585,6 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="applyButtonActionPerformed"/>
           </Events>
-        </Component>
-        <Component class="javax.swing.JLabel" name="jLabel1">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Annotation Label Font:"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JComboBox" name="annotationLabelSizeCombobox">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="annotationLabelSizeComboboxActionPerformed"/>
-          </Events>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="tdv.getAnnotationLabelSizeComboBox()"/>
-          </AuxValues>
-        </Component>
-        <Component class="javax.swing.JCheckBox" name="annotationLabelAutoResizeCheckbox">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="AutoSize"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="annotationLabelAutoResizeCheckboxActionPerformed"/>
-          </Events>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="tdv.getannotationLabelAutoSizeCheckBox()"/>
-          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
