updates to about page

--- a/core/igb/src/main/resources/about/about.css
+++ b/core/igb/src/main/resources/about/about.css
@@ -110,3 +110,13 @@
     /*max-height: 154px;*/
     /*max-width: 154px;*/
 }
+
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
+.vertical-align {
+    display: flex;
+    align-items: center;
+}
