--- a/plugins/plugin-manager/src/main/resources/PluginConfigurationPanel.fxml
+++ b/plugins/plugin-manager/src/main/resources/PluginConfigurationPanel.fxml
@@ -37,11 +37,11 @@
             </Button>
          </children>
       </HBox>
-      <SplitPane dividerPositions="0.29797979797979796" prefHeight="305.0" prefWidth="640.0" stylesheets="@PluginConfigurationPanel-splitpane.css" VBox.vgrow="ALWAYS">
+      <SplitPane dividerPositions="0.3488" prefHeight="305.0" prefWidth="640.0" stylesheets="@PluginConfigurationPanel-splitpane.css" VBox.vgrow="ALWAYS">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <ListView fx:id="listView" fixedCellSize="43.0" layoutY="1.0" prefHeight="303.0" prefWidth="186.0" stylesheets="@PluginConfigurationPanel-scroll.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <ListView fx:id="listView" fixedCellSize="43.0" layoutY="1.0" minWidth="250.0" prefHeight="303.0" prefWidth="250.0" stylesheets="@PluginConfigurationPanel-scroll.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="338.0" prefWidth="467.0">
