--- a/plugins/plugin-manager/src/main/resources/PluginConfigurationPanel.fxml
+++ b/plugins/plugin-manager/src/main/resources/PluginConfigurationPanel.fxml
@@ -37,7 +37,7 @@
             </Button>
          </children>
       </HBox>
-      <SplitPane dividerPositions="0.3488" prefHeight="305.0" prefWidth="640.0" stylesheets="@PluginConfigurationPanel-splitpane.css" VBox.vgrow="ALWAYS">
+      <SplitPane fx:id="splitPane" dividerPositions="0.3488" prefHeight="305.0" prefWidth="640.0" stylesheets="@PluginConfigurationPanel-splitpane.css" VBox.vgrow="ALWAYS">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
