fix font in avatar

--- a/plugins/plugin-manager/src/main/resources/PluginConfigurationPanel-splitpane.css
+++ b/plugins/plugin-manager/src/main/resources/PluginConfigurationPanel-splitpane.css
@@ -1,3 +1,8 @@
 .split-pane > .split-pane-divider {  
     -fx-padding: 0 0.1em 0 0.1em;  
 }
+
+.avatar {
+    -fx-font-family: "Roboto";
+    -fx-font-size: 2.2em;
+}
